apps/base/paperless-ngx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-paperless-ngx
  labels:
    trust.cert-manager.io/inject-bundle: "true"
