apps/base/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: app-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx
      component: webserver
  template:
    metadata:
      labels:
        app: paperless-ngx
        component: webserver
    spec:
      containers:
        - name: webserver
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: data
            - mountPath: /usr/src/paperless/media
              name: media
          ports:
            - containerPort: 8000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: app-paperless-ngx
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: paperless-ngx
    component: webserver
