apps/base/paperless-ngx/gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-gotenberg
  namespace: app-paperless-ngx
  labels:
    app: paperless-ngx-gotenberg
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx-gotenberg
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-ngx-gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:8.31
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 3000
              name: http
          command:
            - "gotenberg"
          args:
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
  namespace: app-paperless-ngx
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: paperless-ngx-gotenberg
