apps/base/paperless-ngx/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: app-paperless-ngx
  labels:
    app: paperless-ngx
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: paperless-ngx
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      nodeSelector:
        kubernetes.io/hostname: cadance
      securityContext:
        fsGroup: 1000
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 20m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /media
              name: media
            - mountPath: /trash
              name: trash
            - name: cluster-ca-bundle
              mountPath: /etc/ssl/certs/ca-certificates.crt
              subPath: ca-certificates.crt
              readOnly: true
          ports:
            - containerPort: 8000
              name: http
      volumes:
        - name: data
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-paperless-ngx/paperless-ngx/data
            type: DirectoryOrCreate
        - name: media
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-paperless-ngx/paperless-ngx/media
            type: DirectoryOrCreate
        - name: trash
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-paperless-ngx/paperless-ngx/trash
            type: DirectoryOrCreate
        - name: cluster-ca-bundle
          configMap:
            name: cluster-ca-bundle
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: app-paperless-ngx
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: paperless-ngx
