apps/base/paperless-ngx/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: app-paperless-ngx
  labels:
    app: paperless-ngx-redis
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx-redis
  template:
    metadata:
      labels:
        app: paperless-ngx-redis
    spec:
      nodeSelector:
        kubernetes.io/hostname: cadance
      containers:
        - name: redis
          image: docker.io/library/redis:7
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          volumeMounts:
            - mountPath: /data
              name: redisdata
          ports:
            - containerPort: 6379
              name: redis
        - name: exporter
          image: oliver006/redis_exporter:v1.80.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          ports:
            - containerPort: 9121
              name: metrics
          readinessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: metrics
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: redisdata
          hostPath:
            path: /mnt/spike/storage/k8s/namespaces/app-paperless-ngx/broker/redisdata
            type: DirectoryOrCreate
      dnsConfig:
        options:
          - name: ndots
            value: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: app-paperless-ngx
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: paperless-ngx-redis
---
apiVersion: v1
kind: Service
metadata:
  name: broker-metrics
  namespace: app-paperless-ngx
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9121"
spec:
  ports:
    - name: metrics
      port: 9121
      targetPort: metrics
  selector:
    app: paperless-ngx-redis
