apps/base/paperless-ngx/tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx-tika
  namespace: app-paperless-ngx
  labels:
    app: paperless-ngx-tika
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: paperless-ngx-tika
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-ngx-tika
    spec:
      containers:
        - name: tika
          image: apache/tika:3.3.1.0-full
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 9998
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 9998
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 9998
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: app-paperless-ngx
spec:
  ports:
    - name: http
      port: 9998
      targetPort: http
  selector:
    app: paperless-ngx-tika
