apps/base/paperless-ngx/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  namespace: app-paperless-ngx
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^paperless-ngx\..*`)
      kind: Rule
      services:
        - name: webserver
          port: 8000
